fix(traffic): remove double border

--- a/src/app/pages/dashboard/electricity/electricity.component.scss
+++ b/src/app/pages/dashboard/electricity/electricity.component.scss
@@ -58,6 +58,10 @@
   nb-list-item {
     display: flex;
     align-items: baseline;
+
+    &:first-child {
+      border-top: none;
+    }
   }
 
   .month {
